--- a/requirements.txt
+++ b/requirements.txt
@@ -4,20 +4,28 @@ anyio==4.8.0
 asyncpg==0.30.0
 click==8.1.8
 colorama==0.4.6
+dnspython==2.7.0
 dotenv==0.9.9
 ecdsa==0.19.0
+email_validator==2.2.0
 fastapi==0.115.11
+GeoAlchemy2==0.17.1
 greenlet==3.1.1
 h11==0.14.0
 idna==3.10
+Jinja2==3.1.6
 Mako==1.3.9
 MarkupSafe==3.0.2
+packaging==24.2
 pyasn1==0.4.8
 pydantic==2.10.6
+pydantic-settings==2.8.1
 pydantic_core==2.27.2
 python-dotenv==1.0.1
 python-jose==3.4.0
+python-multipart==0.0.20
 rsa==4.9
+secure-smtplib==0.1.1
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.38
