--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.13
+aiosignal==1.3.2
 alembic==1.15.1
 annotated-types==0.7.0
 anyio==4.8.0
 asyncpg==0.30.0
+attrs==25.3.0
+Brotli==1.1.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
 dnspython==2.7.0
@@ -9,6 +16,8 @@ dotenv==0.9.9
 ecdsa==0.19.0
 email_validator==2.2.0
 fastapi==0.115.11
+frozenlist==1.5.0
+g4f==0.4.8.6
 GeoAlchemy2==0.17.1
 greenlet==3.1.1
 h11==0.14.0
@@ -16,14 +25,20 @@ idna==3.10
 Jinja2==3.1.6
 Mako==1.3.9
 MarkupSafe==3.0.2
+multidict==6.1.0
+nest-asyncio==1.6.0
 packaging==24.2
+propcache==0.3.0
 pyasn1==0.4.8
+pycryptodome==3.21.0
 pydantic==2.10.6
 pydantic-settings==2.8.1
 pydantic_core==2.27.2
+pyst2==0.5.1
 python-dotenv==1.0.1
 python-jose==3.4.0
 python-multipart==0.0.20
+requests==2.32.3
 rsa==4.9
 secure-smtplib==0.1.1
 six==1.17.0
@@ -31,5 +46,7 @@ sniffio==1.3.1
 SQLAlchemy==2.0.38
 starlette==0.46.0
 typing_extensions==4.12.2
+urllib3==2.3.0
 uvicorn==0.34.0
 websockets==15.0
+yarl==1.18.3
